test/classes/initializers/records/generics/assignment/typeAliasError.good
typeAliasError.chpl:13: error: Best initializer match doesn't work for generic instantiation Generic(int(64))
typeAliasError.chpl:5: note: Best initializer match was defined here, and generated instantiation Generic(string)
